--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Nila Mandal</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+  <p>I'm hosted with GitHub Pages. Test</p>
 </body>
 </html>
