--- a/contact.html
+++ b/contact.html
@@ -12,21 +12,17 @@
     <div class="row">
       <div class="col-md-1">
         <div class="menu">
-          <a href="index.html" class="active">Home</a> <br>
+          <a href="index.html">Home</a> <br>
           <a href="research.html">Research</a> <br>
-          <a href="contact.html">Contact</a> <br>
+          <a href="contact.html" class="active">Contact</a> <br>
         </div>
       </div>
       <div class="col-md-11">
           <div class="first">
             <h1>Nila Mandal</h1>
           </div>
-          <h2>Bio</h2>
-            <p>I am a PhD student in the Computer Science and Engineering Department at the University of Connecticut.</p>
-            <p>Currently, my research is in machine learning for applications in physical sciences.</p>
+          <h2>Contact</h2>
             <p>If you would like to contact me, I can be reached at nila.mandal@uconn.edu</p>
-          <h2>Previous Education</h2>
-            <p>B.S. in Computer Science and Mathematics, Minor in French (Brandeis University, 2018)</p>
       </div>
     </div>
   </div>
