--- a/research.html
+++ b/research.html
@@ -12,8 +12,8 @@
     <div class="row">
       <div class="col-md-1">
         <div class="menu">
-          <a href="index.html" class="active">Home</a> <br>
-          <a href="research.html">Research</a> <br>
+          <a href="index.html">Home</a> <br>
+          <a href="research.html" class="active">Research</a> <br>
           <a href="contact.html">Contact</a> <br>
         </div>
       </div>
@@ -21,12 +21,10 @@
           <div class="first">
             <h1>Nila Mandal</h1>
           </div>
-          <h2>Bio</h2>
-            <p>I am a PhD student in the Computer Science and Engineering Department at the University of Connecticut.</p>
+          <h2>Research Interests</h2>
             <p>Currently, my research is in machine learning for applications in physical sciences.</p>
-            <p>If you would like to contact me, I can be reached at nila.mandal@uconn.edu</p>
-          <h2>Previous Education</h2>
-            <p>B.S. in Computer Science and Mathematics, Minor in French (Brandeis University, 2018)</p>
+          <h2>Publications</h2>
+            <p>None yet. Check back soon!</p>
       </div>
     </div>
   </div>
