--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <link rel="stylesheet" href="reset.css">
-  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="css\bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">  
+  <link href="main.css" rel="stylesheet">
   <title>Nila Mandal</title>
 </head>
 <body>
