--- a/work.html
+++ b/work.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="reset.css">
+  <link href="css\bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
+  <title>Nila Mandal</title>
+</head>
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-1">
+        <div class="menu">
+          <a href="index.html">Home</a> <br>
+          <a href="research.html" class="active">Research</a> <br>
+          <a href="contact.html">Contact</a> <br>
+        </div>
+      </div>
+      <div class="col-md-11">
+          <div class="first">
+            <h1>Nila Mandal</h1>
+          </div>
+          <h2>Research Interests</h2>
+            <p>Currently, my research is in machine learning for applications in physical sciences.</p>
+          <h2>Publications</h2>
+            <p>None yet. Check back soon!</p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
