--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
           <a href="index.html">Home</a> <br>
           <a href="research.html">Research</a> <br>
           <a href="contact.html" class="active">Contact</a> <br>
+          <a href="work.html">Past Work</a> <br>
         </div>
       </div>
       <div class="col-md-11">
