--- a/work.html
+++ b/work.html
@@ -14,8 +14,9 @@
       <div class="col-md-1">
         <div class="menu">
           <a href="index.html">Home</a> <br>
-          <a href="research.html" class="active">Research</a> <br>
+          <a href="research.html">Research</a> <br>
           <a href="contact.html">Contact</a> <br>
+          <a href="work.html" class="active">Past Work</a> <br>
         </div>
       </div>
       <div class="col-md-11">
