--- a/work.html
+++ b/work.html
@@ -23,10 +23,19 @@
           <div class="first">
             <h1>Nila Mandal</h1>
           </div>
-          <h2>Research Interests</h2>
-            <p>Currently, my research is in machine learning for applications in physical sciences.</p>
-          <h2>Publications</h2>
-            <p>None yet. Check back soon!</p>
+          <h2>University of Connecticut</h2>
+            <ul>
+              <li>Head TA for Theory of Computation course, Spring 2019</li>
+              <li>TA for Data Structures and Object-Oriented Design, Sprint 2019</li>
+              <li>TA for Introduction to Programming for Engineers, Fall 2018</li>
+            </ul>  
+          <h2>Brandeis University</h2>
+            <ul>
+              <li>TA for Database Systems course, Spring 2018</li>
+              <li>TA for Discrete Structures course, Fall 2017</li>
+              <li>TA for Data Structures and Algorithms course, Spring 2017</li>
+              <li>TA for Introduction to Programming course, Fall 2016</li>
+            </ul>  
       </div>
     </div>
   </div>
