--- a/work.html
+++ b/work.html
@@ -24,11 +24,9 @@
             <h1>Nila Mandal</h1>
           </div>
           <h2>University of Connecticut</h2>
-            <ul>
-              <li>Head TA for Theory of Computation course, Spring 2019</li>
-              <li>TA for Data Structures and Object-Oriented Design, Sprint 2019</li>
-              <li>TA for Introduction to Programming for Engineers, Fall 2018</li>
-            </ul>  
+              <p>Head TA for Theory of Computation course, Spring 2019</p>
+              <p>TA for Data Structures and Object-Oriented Design, Sprint 2019</p>
+              <p>TA for Introduction to Programming for Engineers, Fall 2018</p> 
           <h2>Brandeis University</h2>
             <ul>
               <li>TA for Database Systems course, Spring 2018</li>
