--- a/work.html
+++ b/work.html
@@ -28,12 +28,10 @@
               <p>TA for Data Structures and Object-Oriented Design, Sprint 2019</p>
               <p>TA for Introduction to Programming for Engineers, Fall 2018</p> 
           <h2>Brandeis University</h2>
-            <ul>
-              <li>TA for Database Systems course, Spring 2018</li>
-              <li>TA for Discrete Structures course, Fall 2017</li>
-              <li>TA for Data Structures and Algorithms course, Spring 2017</li>
-              <li>TA for Introduction to Programming course, Fall 2016</li>
-            </ul>  
+              <p>TA for Database Systems course, Spring 2018</p>
+              <p>TA for Discrete Structures course, Fall 2017</p>
+              <p>TA for Data Structures and Algorithms course, Spring 2017</p>
+              <p>TA for Introduction to Programming course, Fall 2016</p>
       </div>
     </div>
   </div>
