--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
           </div>
           <h2>University of Connecticut</h2>
               <p>Head TA for Theory of Computation course, Spring 2019</p>
-              <p>TA for Data Structures and Object-Oriented Design, Sprint 2019</p>
+              <p>TA for Data Structures and Object-Oriented Design, Spring 2019</p>
               <p>TA for Introduction to Programming for Engineers, Fall 2018</p> 
           <h2>Brandeis University</h2>
               <p>TA for Database Systems course, Spring 2018</p>
