--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
           <h2>Research Interests</h2>
             <p>Currently, my research is in machine learning for applications in physical sciences.</p>
           <h2>Publications</h2>
-            <p>None yet. Check back soon!</p>
+            <p>Model selection for active learning (submitted, 2021)</p>
       </div>
     </div>
   </div>
