Add publication to research pge

--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
           <h2>Research Interests</h2>
             <p>Currently, my research is in machine learning for applications in physical sciences.</p>
           <h2>Publications</h2>
-            <p>Model selection for active learning (submitted, 2021)</p>
+            <p>Maryam Pardakhti, Nila Mandal, Anson W. K. Ma, Qian Yang. Practical Active Learning with Model Selection for Small Data, ICMLA 2021, https://arxiv.org/abs/2112.11572</p>
       </div>
     </div>
   </div>
