--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
           <h2>Research Interests</h2>
             <p>Currently, my research is in machine learning for applications in physical sciences.</p>
           <h2>Publications</h2>
-            <p>Maryam Pardakhti, Nila Mandal, Anson W. K. Ma, Qian Yang. Practical Active Learning with Model Selection for Small Data, ICMLA 2021, https://arxiv.org/abs/2112.11572</p>
+            <p>Maryam Pardakhti, Nila Mandal, Anson W. K. Ma, Qian Yang. Practical Active Learning with Model Selection for Small Data, ICMLA 2021, <a href="https://arxiv.org/abs/2112.11572">https://arxiv.org/abs/2112.11572</a></p>
       </div>
     </div>
   </div>
