--- a/work.html
+++ b/work.html
@@ -24,6 +24,7 @@
             <h1>Nila Mandal</h1>
           </div>
           <h2>University of Connecticut</h2>
+              <p>TA for Data Structures and Object-Oriented Design, Fall 2021</p>
               <p>Head TA for Theory of Computation course, Spring 2019</p>
               <p>TA for Data Structures and Object-Oriented Design, Spring 2019</p>
               <p>TA for Introduction to Programming for Engineers, Fall 2018</p> 
