--- a/work.html
+++ b/work.html
@@ -24,15 +24,20 @@
             <h1>Nila Mandal</h1>
           </div>
           <h2>University of Connecticut</h2>
+              <p>Instructor for Contemporary Issues in Computer Science and Engineering, Fall 2023</p>
+              <p>Guest Instructor for Information Ecosystems Threats, Fall 2022</p>
               <p>TA for Data Structures and Object-Oriented Design, Fall 2021</p>
               <p>Head TA for Theory of Computation course, Spring 2019</p>
               <p>TA for Data Structures and Object-Oriented Design, Spring 2019</p>
               <p>TA for Introduction to Programming for Engineers, Fall 2018</p> 
+          <h2>University of Connecticut Graduate Employee Union</h2>
+              <p>Recording Secretary, Fall 2023-Spring 2024</p>
+              <p>Steward, Fall 2022-Spring 2023</p>
           <h2>Brandeis University</h2>
-              <p>TA for Database Systems course, Spring 2018</p>
-              <p>TA for Discrete Structures course, Fall 2017</p>
-              <p>TA for Data Structures and Algorithms course, Spring 2017</p>
-              <p>TA for Introduction to Programming course, Fall 2016</p>
+              <p>TA for Database Systems, Spring 2018</p>
+              <p>TA for Discrete Structures, Fall 2017</p>
+              <p>TA for Data Structures and Algorithms, Spring 2017</p>
+              <p>TA for Introduction to Programming, Fall 2016</p>
       </div>
     </div>
   </div>
