--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="index.html" class="active">Home</a> <br>
           <a href="research.html">Research</a> <br>
           <a href="contact.html">Contact</a> <br>
-          <a href="work.html">Past Work</a> <br>
+          <a href="work.html">Teaching</a> <br>
         </div>
       </div>
       <div class="col-md-11">
